# smart-desk

./: Cargo.toml  deploy.ps1
service/: smart-desk.service
src/: main.rs
src/smart_desk/: desk_actions.rs  distance.rs  hal.rs  hardware_error.rs  mod.rs  motor.rs  settings.rs
